# Packet-Stoat

./: .env.example  .gitignore  ALPHA2_AUDIT.md  ALPHA2_PLAN.md  ALPHA2_RELEASE_NOTES.md  ALPHA3_AUDIT.md  ALPHA3_GOAL.md  ALPHA3_PLAN.md  ALPHA3_RELEASE_NOTES.md  ALPHA_RELEASE_NOTES.md  CHANGELOG.md  CHECKSUMS.sha256  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_MANIFEST.md  SECURITY.md  packaging_helpers.py  pyproject.toml  setup.py  workspace_manifest.yaml
benchmark_results/: ctypes.json  expected_exports_alpha2_start.txt  exports_alpha2_start_macos.txt  native.json  summary.md
benchmarks/: README.md  bench_ctypes.py  native_bench.cpp  native_canonical_benchmark.cpp
configs/: lattice_backend.json  lattice_backend.real.example.json
docs/: ABI.md  ALPHA5_INTEGRATION_MATRIX.md  ALPHA5_RELEASE_CHECKLIST.md  API_STABILITY.md  ARTIFACT_LAYOUT.md  BENCHMARKING.md  CPP_RAII.md  CROSS_HOST_SIGNOFF.md  CXX_RAII.md  DEAD_RECKONING_COVERAGE.md  DELIVERABLES.md  DEMO_SCRIPT.md  DEVELOPMENT_CHECKS.md  DIFFERENTIAL_TESTING.md  DIS6_DIS7_TRANSLATION_MATRIX.md  DIS_FULL_COVERAGE_PLAN.md  DIS_HEADER_COMPATIBILITY.md  DIS_PDU_CATALOG.md  DIS_VERSION_TRANSLATION.md  DOUBLE_BUFFER_SNAPSHOTS.md  ENDPOINT_COVERAGE.md  ENGINE_INTEGRATION.md  ENGINE_LOGGING.md  ENGINE_ORIENTATION_VERIFICATION.md  ENGINE_QUICKSTART.md  ENTITY_TABLE.md  ENUM_COVERAGE.md  EPIC1_DIFFERENTIATOR_AUDIT.md  EPIC2_AUDIT.md  EPIC2_FULL_DIS_BUILDOUT.md  EPIC2_MILESTONES.md  EPIC2_PARITY.md  EPIC2_SEMANTIC_WAVES.md  EVIDENCE_PACK.md  FASTDIS_SYMBOLS.md  FRAME_TRANSFORMS.md  GENERATED_MESSAGE_VIEWS.md  GENERATION_PIPELINE.md  GODOT_ADAPTER.md  GODOT_WORKFLOW.md  (+69 more)
examples/: bench_header_scan.py  count_file.py  scan_udp.py
extensions/fastdis-symbols/: README.md  pyproject.toml
extensions/fastdis-symbols/include/fastdis_symbols/: fastdis_symbols.h
extensions/fastdis-symbols/python/src/fastdis_symbols/: __init__.py
extensions/fastdis-symbols/spec/: affiliation_policy.json  dis_to_2525_rules.json  golden_cases.jsonl  sidc.schema.json  symbol_descriptor.schema.json  symbol_handoff.schema.json
fuzz/: fuzz_catalog_dispatch.cpp  fuzz_entity_table_ingest.cpp  fuzz_entity_transform.cpp  fuzz_frame_orientation.cpp  fuzz_header.cpp  fuzz_min_lengths.cpp  fuzz_scan_many.cpp  fuzz_snapshot_buffer.cpp  fuzz_standalone.hpp  fuzz_unknown_pdu.cpp
integrations/lattice/: README.md  pyproject.toml
integrations/lattice/configs/: force_disposition_mapping.yaml
integrations/lattice/examples/: dis_entity_fixture.json  lattice_annotation_fixture.json  lattice_appearance_fixture.json  lattice_attribute_fixture.json  lattice_em_observation_fixture.json  lattice_entity_damage_fixture.json  lattice_event_collision_elastic_fixture.json  lattice_event_fire_fixture.json  lattice_event_le_fire_fixture.json  lattice_geo_grid_fixture.json  lattice_geo_line_fixture.json  lattice_geo_point_fixture.json  lattice_info_ops_action_fixture.json  lattice_info_ops_report_fixture.json  lattice_is_group_of_fixture.json  lattice_receiver_fixture.json  lattice_relationship_fixture.json  lattice_remove_entity_fixture.json  lattice_sensor_fixture.json  lattice_task_action_fixture.json  lattice_task_action_response_fixture.json  lattice_task_comment_fixture.json  lattice_task_control_fixture.json  lattice_task_data_query_fixture.json  lattice_task_event_report_fixture.json  lattice_task_message_fixture.json  lattice_task_record_query_fixture.json  lattice_task_resupply_cancel_fixture.json  lattice_task_resupply_offer_fixture.json  lattice_task_resupply_received_fixture.json  lattice_task_set_data_fixture.json  lattice_task_start_fixture.json  lattice_track_fixture.json  lattice_transmitter_fixture.json  lattice_underwater_signal_fixture.json  object_fixture.json
integrations/lattice/proto/packetstoat/lattice_shim/v1/: lattice_shim.proto
integrations/lattice/src/packet_stoat_lattice/: __init__.py  auth.py  canonical.py  dis_to_lattice.py  entity_mapping.py  grpc_backends.py  grpc_chaos.py  grpc_publish_client.py  grpc_shim_server.py  grpc_stream_client.py  lattice_to_dis.py  mock_shim.py  payloads.py  plugins.py  publishers.py  sdk_rest_compat.py
standards/: registry.yaml
tests/: __init__.py  test_alpha2_host_report_transfer.py  test_alpha2_release_audit.py  test_alpha2_signoff_matrix.py  test_alpha3_release_audit.py  test_alpha3_verification_closeout.py  test_alpha4_1_sdk_gap_report.py  test_alpha4_release_audit.py  test_alpha5_integration_matrix.py  test_benchmark_claim_summary.py  test_benchmark_completion_audit.py  test_benchmark_contract_stack.py  test_benchmark_coverage_report.py  test_benchmark_matrix_report.py  test_benchmark_surface_utils.py  test_benchmark_tools.py  test_bootstrap_workflow.py  test_build_ctypes_wheel.py  test_build_unreal_linux_package_docker.py  test_build_unreal_plugin.py  test_build_windows_ctypes_wheel.py  test_build_windows_dll.py  test_capture_alpha2_host_signoff.py  test_capture_fastdis_unreal_linux_proof.py  test_capture_grill_unity_benchmark.py  test_capture_grill_unreal_linux_build_proof.py  test_capture_unity_host_report.py  test_check_docs.py  test_check_repo_sanitization.py  test_clean_artifacts.py  test_competitor_benchmark_handoff.py  test_competitor_capture_manifest.py  test_competitor_handoff_workbench.py  test_competitor_lane_summary.py  test_core_cross_platform_harness_report.py  test_core_filter_matrix_tools.py  test_core_replay_matrix_tools.py  test_cross_engine_equivalence_report.py  test_dead_reckoning_coverage.py  test_deliverables_report.py  (+154 more)
tools/: adopt_unity_install_smoke.py  artifacts.py  audit_engine_benchmark_completion.py  audit_source_cleanliness.py  benchmark_surface_utils.py  bootstrap_clean_checkout_artifacts.py  bootstrap_workflow.py  build_alpha5_release_artifacts.py  build_benchmark_claim_summary.py  build_benchmark_coverage_report.py  build_benchmark_matrix_report.py  build_competitor_capture_manifest.py  build_competitor_lane_summary.py  build_core_cross_platform_harness_report.py  build_cross_engine_equivalence_report.py  build_native.py  (+197 more)
(+572 files in other folders)
