[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdis"
version = "0.13.0a3"
description = "Fast callback-first DIS packet scanning with a portable C ABI shared library."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{ name = "fastdis contributors" }]
keywords = ["DIS", "distributed-interactive-simulation", "parser", "udp", "c-extension", "shared-library", "game-engine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastdis*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
