[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdis"
version = "0.17.0a12"
description = "Packet Stoat fastdis core: native-first DIS packet scanning and simulation bridge tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{ name = "fastdis contributors" }]
keywords = ["DIS", "distributed-interactive-simulation", "parser", "udp", "c-extension", "shared-library", "game-engine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
fastdis = "fastdis.cli:main"
packet-stoat = "fastdis.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=5",
  "ruff>=0.15",
  "pyright>=1.1.410",
  "grpcio>=1.0",
  "grpcio-tools>=1.0",
  "httpx>=0.28",
  "anduril-lattice-sdk>=4.14",
  "Pillow>=10",
  "scipy>=1.11",
  "sympy>=1.12",
]
lattice = [
  "anduril-lattice-sdk>=4.14",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastdis*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"tools/*.py" = ["E402"]
"setup.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
include = ["src/fastdis"]
